src/main/java/com/example/demo/error/UserAlreadyExistAuthenticationException.java
package com.example.demo.error;

public class UserAlreadyExistAuthenticationException extends RuntimeException {
    public UserAlreadyExistAuthenticationException(String message) {
        super(message);
    }
}
